[package]
name = "try_collections"
version = "0.1.0"
authors = ["Sam Westerman <sam@sampersand.me>"]
edition = "2018"
publish= true
description = "Collections that support operations that may fail."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/sampersand/try_collections"
keywords = ["fallible", "hashmap", "try", "collections", "result"]
categories = ["data-structures"]

[dependencies]
